# pxr-kind

./: CMakeLists.txt  README.md  pch.h  pyproject-dev.toml  pyproject.toml
.github/actions/building-deps/: action.yml
cmake/: pxr-kind-config.cmake.in
src/: CMakeLists.txt
src/pxr/kind/: api.h  moduleDeps.cpp  pch.h  registry.cpp  registry.h
src/python/: CMakeLists.txt  __init__.py  module.cpp  wrapRegistry.cpp  wrapTokens.cpp
test/: CMakeLists.txt  testKindRegistry.py  test_KindRegistry.py
test/testKindRegistry/lib/python/: __init__.py
